@@ -91,15 +91,15 @@ describe 'FeedController', ->
 		expect(@$window.document.title).toBe('News (5) | ownCloud')
 
 
-	it 'should show 999+ if in window title when more than 999 unread count', =>
+	it 'should show 99+ if in window title when more than 99 unread count', =>
 		item = {id: 3, unreadCount: 1, faviconLink: 'test', url: 'hi'}
-		item1 = {id: 5, unreadCount: 999, faviconLink: 'test', url: 'his'}
+		item1 = {id: 5, unreadCount: 99, faviconLink: 'test', url: 'his'}
 		@FeedModel.add(item)
 		@FeedModel.add(item1)
 
 		@scope.getTotalUnreadCount()
 
-		expect(@$window.document.title).toBe('News (999+) | ownCloud')
+		expect(@$window.document.title).toBe('News (99+) | ownCloud')
 
 
 	it 'should move a feed if moveFeedToFolder is broadcasted', =>
